backend : logger related changes added

--- a/project/config/productService-dev.properties
+++ b/project/config/productService-dev.properties
@@ -1,9 +1,9 @@
 # Logging pattern for the console
 #logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
-#logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
  
 # Logging pattern for file
-#logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 logging.file=D:\\ApplicationLogs\\product-service-dev.log
 logging.file.max-size=5MB
 logging.level.org.springframework.web=INFO
