--- a/gateway-service/pom.xml
+++ b/gateway-service/pom.xml
@@ -119,7 +119,7 @@
 		    <artifactId>json</artifactId>
 		    <version>20180130</version>
 		</dependency>
-	<!-- <dependency>
+	<dependency>
 		<groupId>com.fasterxml.jackson.core</groupId>
 		<artifactId>jackson-core</artifactId>
 		<version>2.9.4</version>
@@ -128,7 +128,7 @@
 		<groupId>com.fasterxml.jackson.core</groupId>
 		<artifactId>jackson-databind</artifactId>
 		<version>2.9.4</version>
-	</dependency> -->
+	</dependency>
 
 		<!-- utilities  end-->
 
