--- a/project/config/userService-dev.yml
+++ b/project/config/userService-dev.yml
@@ -4,9 +4,17 @@ hibernate:
       driver_class: com.mysql.jdbc.Driver
       url: jdbc:mysql://localhost:3306/mydatabase
       username: root
-      password: password
+      #password: password
+      password: ENC(ainZYGWSiLRVpxaOXKp1Txpb0ULczTYq)
    hbm2ddl:
       auto: validate
    dialect: org.hibernate.dialect.MySQLDialect
 show_sql: true
+
+jasypt:
+  encryptor:
+    algorithm: PBEWithMD5AndDES
+    #ideally the below key should be parameterized
+    password: secretkey
+
 
