--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -73,6 +73,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
+		
 		<!-- <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -80,6 +81,7 @@
 		</dependency> -->
 		
 
+		
 
 
 		<!-- database -->
@@ -99,6 +101,7 @@
 			<artifactId>spring-boot-starter-logging</artifactId>
 		</dependency>
 
+		<!-- utilities start -->
 
 		<!-- swagger -->
 		<dependency>
@@ -113,7 +116,16 @@
 			<version>2.6.1</version>
 			<scope>compile</scope>
 		</dependency>
-
+		
+		<!-- for encrypted properties -->
+		<dependency>
+			<groupId>com.github.ulisesbocchio</groupId>
+			<artifactId>jasypt-spring-boot-starter</artifactId>
+			<version>2.0.0</version>
+		</dependency>
+		
+		
+		<!-- utilities end -->
 
 		<!-- testing -->
 		<dependency>
