--- a/project/setup/application/zipkin_dockerfile/Dockerfile
+++ b/project/setup/application/zipkin_dockerfile/Dockerfile
@@ -1,7 +1,13 @@
+#####################code for image partha011/zipkin:2.11.5#########################################
 FROM openjdk:8u181-jdk
-RUN apt-get install wget
 RUN wget https://repo1.maven.org/maven2/io/zipkin/java/zipkin-server/2.11.5/zipkin-server-2.11.5-exec.jar
+#COPY zipkin-server-2.11.5-exec.jar zipkin-server-2.11.5-exec.jar
+RUN chmod 777 zipkin-server-2.11.5-exec.jar
 EXPOSE 9411/tcp
-ENTRYPOINT ["java","-jar","zipkin-server-2.11.5-exec.jar"]
-#CMD ["java -jar /zipkin-server-2.8.3-exec.jar"]
-MAINTAINER partha_biswas
+
+#####################code for image partha011/zipkin:2.8.3#########################################
+#FROM openjdk:8u181-jdk
+#RUN wget https://repo1.maven.org/maven2/io/zipkin/java/zipkin-server/2.8.3/zipkin-server-2.8.3-exec.jar
+##COPY zipkin-server-2.8.3-exec.jar zipkin-server-2.8.3-exec.jar
+#RUN chmod 777 zipkin-server-2.8.3-exec.jar
+#EXPOSE 9411/tcp
