--- a/project/config/gatewayService-dev.properties
+++ b/project/config/gatewayService-dev.properties
@@ -20,3 +20,7 @@ logging.level.org.hibernate=INFO
 ##server.ssl.key-store=file:C:\\Users\\partha\\Desktop\\ssl-server.jks
 #server.ssl.key-store-provider=SUN
 #server.ssl.key-store-type=JKS
+
+
+app.jwtSecret= JWTSuperSecretKey
+app.jwtExpirationInMs = 604800000
