backend : forget password and login authentication

--- a/product-service/pom.xml
+++ b/product-service/pom.xml
@@ -108,13 +108,18 @@
 			<version>20180130</version>
 		</dependency>
 
-
 		<dependency>
 			<groupId>org.mongodb</groupId>
 			<artifactId>bson</artifactId>
 			<!-- <version>3.0.0</version> -->
 		</dependency>
-
+		
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.6</version>
+			<scope>provided</scope>
+		</dependency>
 
 		<!-- utilities end -->
 
