--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -122,7 +122,18 @@
 			<groupId>com.github.ulisesbocchio</groupId>
 			<artifactId>jasypt-spring-boot-starter</artifactId>
 			<version>2.0.0</version>
+		</dependency>		
+		
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.6</version>
+			<scope>provided</scope>
 		</dependency>
+
+		
+		
+		
 		
 		
 		<!-- utilities end -->
