--- a/product-service/pom.xml
+++ b/product-service/pom.xml
@@ -74,11 +74,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
-		<!-- <dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<optional>true</optional>
-		</dependency> -->
+		</dependency>
 
 		<!-- utilities start -->
 
@@ -107,12 +107,6 @@
 			<artifactId>json</artifactId>
 			<version>20180130</version>
 		</dependency>
-
-		<dependency>
-			<groupId>org.mongodb</groupId>
-			<artifactId>bson</artifactId>
-			<!-- <version>3.0.0</version> -->
-		</dependency>
 		
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -120,25 +114,26 @@
 			<version>1.18.6</version>
 			<scope>provided</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.github.ulisesbocchio</groupId>
+			<artifactId>jasypt-spring-boot-starter</artifactId>
+			<version>2.0.0</version>
+		</dependency>
 
 		<!-- utilities end -->
 
 
 		<!-- database -->
-		<!-- mongodb java driver -->
 		<dependency>
-			<groupId>org.mongodb</groupId>
-			<artifactId>mongo-java-driver</artifactId>
-			<!-- <version>2.11.0</version> -->
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-
-		<!-- Spring data mongodb -->
 		<dependency>
-			<groupId>org.springframework.data</groupId>
-			<artifactId>spring-data-mongodb</artifactId>
-			<!-- <version>2.0.9.RELEASE</version> -->
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
 		</dependency>
-
 
 		<dependency>
 			<groupId>cglib</groupId>
