admin applicaiton added

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ discovery-service/.mvn/**
 RemoteSystemsTempFiles/.project
 .recommenders/**
 **/.mvn/wrapper/**
+admin-application/mvnw.cmd
+admin-application/mvnw
+admin-application/.mvn/wrapper/maven-wrapper.jar
