--- a/admin-application/src/main/resources/bootstrap.yml
+++ b/admin-application/src/main/resources/bootstrap.yml
@@ -1,12 +1,12 @@
 spring:
   application:
-    name: discoveryService 
+    name: adminApplication 
     
   profiles:
     active:
     - local
     
-    
+ 
+
 server:
-  port: 8081
-  
+  port: 8088
