backend: logfile location and profile local

--- a/project/config/productService-dev.properties
+++ b/project/config/productService-dev.properties
@@ -5,6 +5,7 @@
 # Logging pattern for file
 #logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 logging.file=D:\\ApplicationLogs\\product-service-dev.log
+#logging.file=C:\\Users\\parbiswa\\Documents\\ApplicationLogs\\product-service-dev.log
 logging.file.max-size=5MB
 logging.level.org.springframework.web=INFO
 logging.level.com.partha=INFO
