--- a/project/config/productService-local.properties
+++ b/project/config/productService-local.properties
@@ -4,8 +4,8 @@
  
 # Logging pattern for file
 #logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
-#logging.file=D:\\ApplicationLogs\\product-service-local.log
-logging.file=C:\\Users\\parbiswa\\Documents\\ApplicationLogs\\product-service-local.log
+logging.file=D:\\ApplicationLogs\\product-service-local.log
+#logging.file=C:\\Users\\parbiswa\\Documents\\ApplicationLogs\\product-service-local.log
 logging.file.max-size=5MB
 logging.level.org.springframework.web=INFO
 logging.level.com.partha=INFO
