--- a/project/config/userService-dev.properties
+++ b/project/config/userService-dev.properties
@@ -7,6 +7,7 @@
 #logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 #logging.pattern.file=%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(${LOG_LEVEL_PATTERN:-%5p}) %clr(${PID:- }){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n${LOG_EXCEPTION_CONVERSION_WORD:-%wEx}
 logging.file=D:\\ApplicationLogs\\user-service-dev.log
+#logging.file=C:\\Users\\parbiswa\\Documents\\ApplicationLogs\\user-service-dev.log
 logging.file.max-size=5MB
 logging.level.org.springframework.web=INFO
 logging.level.com.partha=INFO
