--- a/admin-application/pom.xml
+++ b/admin-application/pom.xml
@@ -43,6 +43,13 @@
 			<version>5.1.46</version>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.4.197</version>
+			<scope>runtime</scope>
+		</dependency>
+		
 
 		
 		<!-- testing -->
