--- a/product-service/pom.xml
+++ b/product-service/pom.xml
@@ -134,6 +134,12 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.4.197</version>
+			<scope>runtime</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>cglib</groupId>
