--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -94,6 +94,12 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.4.197</version>
+			<scope>runtime</scope>
+		</dependency>
 
 		<!-- logger -->
 		<dependency>
