backend : base image changed to alpine and ports fixed

--- a/config-service/.docker/Dockerfile
+++ b/config-service/.docker/Dockerfile
@@ -1,5 +1,6 @@
-FROM java:8
-EXPOSE 8080
+#FROM java:8
+FROM openjdk:8-jre-alpine
+EXPOSE 8082
 ADD /target/config-service-1.0.jar config-service-1.0.jar
 ENTRYPOINT ["java","-jar","config-service-1.0.jar"]
 
