--- a/database-service/.docker/Dockerfile
+++ b/database-service/.docker/Dockerfile
@@ -1,4 +1,5 @@
-FROM java:8
-EXPOSE 8091 9090
+#FROM java:8
+FROM openjdk:8-jre-alpine
+EXPOSE 8091 8092
 ADD /target/database-service-1.0.jar database-service-1.0.jar
 ENTRYPOINT ["java","-jar","database-service-1.0.jar"]
