--- a/gateway-service/.docker/Dockerfile
+++ b/gateway-service/.docker/Dockerfile
@@ -1,4 +1,5 @@
-FROM java:8
-EXPOSE 8080
+#FROM java:8
+FROM openjdk:8-jre-alpine
+EXPOSE 8083
 ADD /target/gateway-service-1.0.jar gateway-service-1.0.jar
 ENTRYPOINT ["java","-jar","gateway-service-1.0.jar"]
