--- a/admin-application/.docker/Dockerfile
+++ b/admin-application/.docker/Dockerfile
@@ -1,4 +1,5 @@
-FROM java:8
-EXPOSE 8080
+#FROM java:8
+FROM openjdk:8-jre-alpine
+EXPOSE 8088
 ADD /target/admin-application-1.0.jar admin-application-1.0.jar
 ENTRYPOINT ["java","-jar","admin-application-1.0.jar"]
