--- a/product-service/.docker/Dockerfile
+++ b/product-service/.docker/Dockerfile
@@ -1,4 +1,5 @@
-FROM java:8
-EXPOSE 8080
+#FROM java:8
+FROM openjdk:8-jre-alpine
+EXPOSE 8085
 ADD /target/product-service-1.0.jar product-service-1.0.jar
 ENTRYPOINT ["java","-jar","product-service-1.0.jar"]
