--- a/admin-application/src/main/resources/application-dev.yml
+++ b/admin-application/src/main/resources/application-dev.yml
@@ -13,7 +13,8 @@
 hibernate:
    connection:
       driver_class: org.h2.Driver
-      url: jdbc:h2:tcp://localhost:8092/mem:db
+      #url: jdbc:h2:tcp://localhost:8092/mem:db
+      url: jdbc:h2:tcp://database-service:30092/mem:db
       username: root
       #password: password
       password: ENC(ainZYGWSiLRVpxaOXKp1Txpb0ULczTYq)
@@ -28,7 +29,6 @@ jasypt:
     algorithm: PBEWithMD5AndDES
     #ideally the below key should be parameterized
     password: secretkey
-
 
 
 
