--- a/admin-application/src/main/resources/application.yml
+++ b/admin-application/src/main/resources/application.yml
@@ -3,10 +3,7 @@ spring:
     name: adminApplication 
     
   profiles:
-    active:
-    - local
-    
-
+    active: local
 
 server:
   port: 8088
