--- a/config-service/src/main/resources/bootstrap.yml
+++ b/config-service/src/main/resources/bootstrap.yml
@@ -10,15 +10,16 @@ spring:
     config:
       server:
         native:
-          #search-locations: classpath:config/
-          #for laptop
-          search-locations: file:E:\\Workspaces\\Workspace_MicroserviceNew\\project\\config
-          #for desktop
-          #search-locations: file:I:\\Workspaces\\Workspace_MicroserviceNew\\project\\config 
+          ## both for reading from classpath and file location profile must be 'native'
+          ##for reading from classpath
+          search-locations: classpath:config/
+          ##for reading from filelocation. 
+          #search-locations: file:E:\\Workspaces\\Workspace_MicroserviceNew\\project\\config
+          #search-locations: file:C:\\Users\\parbiswa\\Documents\\workspaces\\MicroservicesNew\\project\\config
 
         
 server:
-  port: 8082
+  port: 30082
 
 
 
