--- a/config-service/src/main/resources/application.properties
+++ b/config-service/src/main/resources/application.properties
@@ -9,3 +9,7 @@ logging.file.max-size=5MB
 logging.level.org.springframework.web=INFO
 logging.level.com.partha=INFO
 logging.level.org.hibernate=INFO
+
+#actuator related properties
+management.security.enabled = false
+endpoints.sensitive=false
