devops : database-service : actuator endpoint added

--- a/database-service/src/main/resources/application.properties
+++ b/database-service/src/main/resources/application.properties
@@ -9,6 +9,11 @@ spring.datasource.initialize=true
 spring.datasource.schema=classpath:schema.txt
 spring.datasource.data=classpath:data.txt
 spring.jpa.hibernate.ddl-auto=none
+spring.h2.console.settings.web-allow-others=true
+
+#actuator related properties
+management.security.enabled = false
+endpoints.sensitive=false
 
 
 logging.file=D:\\BankingApplicationLogs\\database-service.log
