backend : spring cloud bus and property refresh related chages

--- a/config-service/src/main/resources/bootstrap.yml
+++ b/config-service/src/main/resources/bootstrap.yml
@@ -15,9 +15,14 @@ spring:
           search-locations: classpath:config/
           ##for reading from filelocation. 
           #search-locations: file:E:\\Workspaces\\Workspace_MicroserviceNew\\project\\config
-          #search-locations: file:C:\\Users\\parbiswa\\Documents\\workspaces\\MicroservicesNew\\project\\config
+          #search-locations: file:C:\\Users\\parbiswa\\Documents\\workspaces\\MicroservicesNew\\config-service\\src\\main\\resources\\config
 
-        
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+   
 server:
   port: 8082
 
