--- a/config-service/src/main/resources/config/gatewayService-dev.properties
+++ b/config-service/src/main/resources/config/gatewayService-dev.properties
@@ -13,7 +13,7 @@ logging.level.org.springframework.web=INFO
 logging.level.com.partha=INFO
 logging.level.org.hibernate=INFO
 
-
+key1=200
 
 #server.ssl.key-alias=selfsigned_localhost_sslserver
 #server.ssl.key-password=changeit
