--- a/config-service/src/main/resources/config/gatewayService-local.properties
+++ b/config-service/src/main/resources/config/gatewayService-local.properties
@@ -13,6 +13,8 @@ logging.level.org.springframework.web=INFO
 logging.level.com.partha=INFO
 logging.level.org.hibernate=INFO
 
+key1=201
+
 
 
 #server.ssl.key-alias=selfsigned_localhost_sslserver
