--- a/config-service/src/main/resources/application.properties
+++ b/config-service/src/main/resources/application.properties
@@ -13,3 +13,11 @@ logging.level.org.hibernate=INFO
 #actuator related properties
 management.security.enabled = false
 endpoints.sensitive=false
+management.endpoint.beans.enabled=true
+management.endpoint.metrics.enabled=true
+management.endpoint.bus-refresh.enabled=true
+management.endpoint.logfile.enabled=true
+management.endpoint.heapdump.enabled=true
+management.endpoint.httptrace.enabled=true
+#management.endpoints.web.exposure.include=refresh
+management.endpoints.web.exposure.include=bus-refresh
