--- a/config-service/src/main/resources/config/productService-dev.properties
+++ b/config-service/src/main/resources/config/productService-dev.properties
@@ -10,3 +10,5 @@ logging.file.max-size=5MB
 logging.level.org.springframework.web=INFO
 logging.level.com.partha=INFO
 logging.level.org.hibernate=INFO
+
+key1=100
