--- a/config-service/src/main/resources/config/productService-local.properties
+++ b/config-service/src/main/resources/config/productService-local.properties
@@ -10,3 +10,6 @@ logging.file.max-size=5MB
 logging.level.org.springframework.web=INFO
 logging.level.com.partha=INFO
 logging.level.org.hibernate=INFO
+
+key1=value103
+
