--- a/config-service/.docker/Dockerfile
+++ b/config-service/.docker/Dockerfile
@@ -1,6 +1,7 @@
 #FROM java:8
 FROM openjdk:8-jre-alpine
 EXPOSE 8082
+ADD /src/main/resources/config config
 ADD /target/config-service-1.0.jar config-service-1.0.jar
 ENTRYPOINT ["java","-jar","config-service-1.0.jar"]
 
