backend: gateway-service : cloud-bus changes commented

--- a/gateway-service/src/main/resources/application.properties
+++ b/gateway-service/src/main/resources/application.properties
@@ -1,2 +1,17 @@
+##actuator related properties
+###########################################################
+#management.security.enabled = false
+#endpoints.sensitive=false
+#management.endpoint.beans.enabled=true
+#management.endpoint.metrics.enabled=true
+#management.endpoint.logfile.enabled=true
+#management.endpoint.heapdump.enabled=true
+#management.endpoint.httptrace.enabled=true
+##the below property is to enable spring cloud-bus refresh
+#management.endpoint.bus-refresh.enabled=true
+##the below property is to enable refresh endpoint on config client
+#management.endpoints.web.exposure.include=refresh
+
+
 
 
