devops changes : frontend backend integration

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -49,13 +49,12 @@ http {
 
 #    #include /etc/nginx/conf.d/*.conf;
 #    server {
-#        l
-#        server_name  http://gateway-service*;
+#        listen       81;
+#        server_name  localhost;
 #
 #        location / {
-#            proxy_pass http://gateway-service:30083/;
-#        }
-#      
+#			proxy_pass       http://gateway-service:30083;
+#		}
 #    }
 
 
