--- a/database-service/pom.xml
+++ b/database-service/pom.xml
@@ -36,6 +36,18 @@
 			<artifactId>spring-data-rest-hal-browser</artifactId>
 		</dependency>
 		
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.6</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>1.3.2</version>
+		</dependency>
+		
 		
 
 		<dependency>
