--- a/database-service/src/main/resources/application.properties
+++ b/database-service/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.datasource.initialize=true
 spring.datasource.schema=classpath:schema.txt
 spring.datasource.data=classpath:data.txt
 spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.h2.console.settings.web-allow-others=true
 
 #actuator related properties
