backend : gatewayservice : feignclient for other environment replaced with resttempate

--- a/config-service/src/main/resources/config/gatewayService-dev.properties
+++ b/config-service/src/main/resources/config/gatewayService-dev.properties
@@ -25,3 +25,7 @@ key1=200
 
 app.jwtSecret= JWTSuperSecretKey
 app.jwtExpirationInMs = 604800000
+
+
+restclient.userService.baseurl=http://user-service:30086
+restclient.productService.baseurl=http://product-service:30085
