backend : disabling cloud-bus property refresh related changes. to enable cloud bus to refresh property just revert the changes

--- a/config-service/src/main/resources/application.properties
+++ b/config-service/src/main/resources/application.properties
@@ -15,9 +15,8 @@ management.security.enabled = false
 endpoints.sensitive=false
 management.endpoint.beans.enabled=true
 management.endpoint.metrics.enabled=true
-management.endpoint.bus-refresh.enabled=true
+#management.endpoint.bus-refresh.enabled=true
 management.endpoint.logfile.enabled=true
 management.endpoint.heapdump.enabled=true
 management.endpoint.httptrace.enabled=true
-#management.endpoints.web.exposure.include=refresh
-management.endpoints.web.exposure.include=bus-refresh
+#management.endpoints.web.exposure.include=bus-refresh
