--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 management.security.enabled = false
 endpoints.sensitive=false
 ##the below property is to enable spring cloud-bus refresh
-management.endpoint.bus-refresh.enabled=true
+#management.endpoint.bus-refresh.enabled=true
 ##the below property is to enable refresh endpoint on config client
 management.endpoints.web.exposure.include=refresh
 #management.endpoint.beans.enabled=true
