--- a/config-service/pom.xml
+++ b/config-service/pom.xml
@@ -63,17 +63,16 @@
 			<artifactId>spring-data-rest-hal-browser</artifactId>
 		</dependency>
 		
-		<!-- for spring cloud bus -->
+		<!-- for spring cloud bus 
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-config-monitor</artifactId>
-			<!-- <version>1.3.1.RELEASE</version> -->
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-stream-rabbit</artifactId>
-			<!-- <version>1.2.1.RELEASE</version> -->
 		</dependency>
+		-->
 		
 	</dependencies>
 
