--- a/user-service/src/main/resources/bootstrap.yml
+++ b/user-service/src/main/resources/bootstrap.yml
@@ -10,11 +10,11 @@ spring:
     config:
       uri: http://localhost:8082
 
-  rabbitmq:
-    host: localhost
-    port: 5672
-    username: guest
-    password: guest 
+#  rabbitmq:
+#    host: localhost
+#    port: 5672
+#    username: guest
+#    password: guest 
 
 eureka: 
   client:
