--- a/product-service/src/main/resources/application-local.properties
+++ b/product-service/src/main/resources/application-local.properties
@@ -12,21 +12,23 @@ management.endpoints.web.exposure.include=refresh
 #management.endpoint.heapdump.enabled=true
 #management.endpoint.httptrace.enabled=true
 
+hibernate.connection.driver_class = org.h2.Driver
+hibernate.connection.url = jdbc:h2:tcp://localhost:8092/mem:db
+hibernate.connection.username = root
+#hibernate.connection.password = password
+hibernate.connection.password = ENC(ainZYGWSiLRVpxaOXKp1Txpb0ULczTYq)
+hibernate.hbm2ddl.auto = validate
+hibernate.dialect = org.hibernate.dialect.H2Dialect
+show_sql = true
 
-# Logging pattern for the console
-#logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
-#logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
- 
-# Logging pattern for file
-#logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
-#logging.file=D:\\ApplicationLogs\\product-service-local.log
-logging.file=C:\\Users\\parbiswa\\Documents\\ApplicationLogs\\product-service-local.log
-logging.file.max-size=5MB
-logging.level.org.springframework.web=INFO
-logging.level.com.partha=INFO
-logging.level.org.hibernate=INFO
+jasypt.encryptor.algorithm = PBEWithMD5AndDES
+jasypt.encryptor.password = secretkey
+server.port = 8085
 
-key1=value103
+test.key1 = value1
+test.key2 = value2
+key1 = value103
+
 
 
 
