--- a/user-service/src/main/resources/application-local.properties
+++ b/user-service/src/main/resources/application-local.properties
@@ -12,26 +12,18 @@ management.endpoints.web.exposure.include=refresh
 #management.endpoint.heapdump.enabled=true
 #management.endpoint.httptrace.enabled=true
 
+hibernate.connection.driver_class = org.h2.Driver
+hibernate.connection.url = jdbc:h2:tcp://localhost:8092/mem:db
+hibernate.connection.username = root
+#hibernate.connection.password = password
+hibernate.connection.password = ENC(ainZYGWSiLRVpxaOXKp1Txpb0ULczTYq)
+hibernate.hbm2ddl.auto = validate
+hibernate.dialect = org.hibernate.dialect.H2Dialect
+show_sql = true
 
-
-# Logging pattern for the console
-#logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
-#logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
-#logging.pattern.console=%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(${LOG_LEVEL_PATTERN:-%5p}) %clr(${PID:- }){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n${LOG_EXCEPTION_CONVERSION_WORD:-%wEx}
- 
-# Logging pattern for file
-#logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
-#logging.pattern.file=%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(${LOG_LEVEL_PATTERN:-%5p}) %clr(${PID:- }){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n${LOG_EXCEPTION_CONVERSION_WORD:-%wEx}
-#logging.file=D:\\ApplicationLogs\\user-service-local.log
-logging.file=C:\\Users\\biswapa\\Documents\\ApplicationLogs\\user-service-local.log
-logging.file.max-size=5MB
-logging.level.org.springframework.web=debug
-logging.level.com.partha=debug
-logging.level.org.hibernate=INFO
-
-
+jasypt.encryptor.algorithm = PBEWithMD5AndDES
+jasypt.encryptor.password = secretkey
+server.port = 8086
 key1=value11
-
-
 
 
