--- a/admin-application/src/main/resources/application-local.properties
+++ b/admin-application/src/main/resources/application-local.properties
@@ -1,17 +1,14 @@
-# Logging pattern for the console
-#logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
-#logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
- 
-# Logging pattern for file
-#logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
-#logging.file=D:\\ApplicationLogs\\admin-application-local.log
-logging.file=C:\\Users\\parbiswa\\Documents\\ApplicationLogs\\admin-application-local.log
-logging.file.max-size=5MB
-logging.level.org.springframework.web=INFO
-logging.level.com.partha=INFO
-logging.level.org.hibernate=INFO
+hibernate.connection.driver_class = org.h2.Driver
+hibernate.connection.url = jdbc:h2:tcp://localhost:8092/mem:db
+hibernate.connection.username = root
+#hibernate.connection.password = password
+hibernate.connection.password = ENC(ainZYGWSiLRVpxaOXKp1Txpb0ULczTYq)
+hibernate.hbm2ddl.auto = validate
+hibernate.dialect = org.hibernate.dialect.H2Dialect
+show_sql = true
 
-server.port=8088
-
-books.per.page=10
+jasypt.encryptor.algorithm = PBEWithMD5AndDES
+jasypt.encryptor.password = secretkey
+server.port = 8088
+books.per.page = 10
 
