--- a/admin-application/src/main/resources/application.properties
+++ b/admin-application/src/main/resources/application.properties
@@ -4,8 +4,8 @@
  
 # Logging pattern for file
 #logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
-logging.file=D:\\ApplicationLogs\\admin-application-local.log
-#logging.file=C:\\Users\\parbiswa\\Documents\\ApplicationLogs\\admin-application-local.log
+#logging.file=D:\\ApplicationLogs\\admin-application-local.log
+logging.file=C:\\Users\\parbiswa\\Documents\\ApplicationLogs\\admin-application-local.log
 logging.file.max-size=5MB
 logging.level.org.springframework.web=INFO
 logging.level.com.partha=INFO
